--- a/histogram/Makefile
+++ b/histogram/Makefile
@@ -11,10 +11,14 @@ UNITFILES =
 histo : histo.o $(UNITFILES)
 	$(CC) $(CFLAGS) -o histo histo.o $(UNITFILES) $(LIB)
 
+histo_locks : histo_locks.o $(UNITFILES)
+	$(CC) $(CFLAGS) -o histo_locks histo_locks.o $(UNITFILES) $(LIB)
+
 clean:
-	rm -f histo *.o
+	rm -f histo histo_locks *.o
 
 histo.o : histo.c
 	$(CC) $(CFLAGS) -c histo.c $(INCLUDE) 
 
-
+histo_locks.o : histo_locks.c
+	$(CC) $(CFLAGS) -c histo_locks.c $(INCLUDE) 
